--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,5 @@
  *
  *= require_tree .
  *= require_self
- *= ./frontend/require bootstrap_frontend.css.scss
+ *= require ./frontend/bootstrap_frontend.css.scss
  */
