--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -155,12 +155,8 @@ div#product-price{
   margin-left: 0px;
   padding-left: 0px;
 }
-$icon-font-path: "../../bootstrap/";
-@font-face {
-    font-family: 'Glyphicons Halflings';
-    src: url('/assets/glyphicons-halflings-regular.eot');
-    src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-}
+$icon-font-path: 'bootstrap/';
+
 @import "bootstrap";
 @import "bootstrap-sprockets";
 
