--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -8,13 +8,14 @@
 }
 .jumbotron h1{
   padding-top: 60px;
+  font-family: 'Josefin Sans', sans-serif;
 }
 div.container{
   width: 100%;
   text-align: center;
 }
 body {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: sans-serif;
   overflow-x: hidden;
   padding:0;
   margin:0;
@@ -45,7 +46,7 @@ body {
   width: 100%;
 }
 .mid{
-  background-color: aqua;
+  background-color: #00EEEE;
   margin-top: 0px;
 }
 .mid>h4{
