--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -109,3 +109,8 @@ div.form-group{
 .form-control{
   font-size: 18px;
 }
+@media screen and (max-width: 768px) and (min-device-width: 0px){
+  *{
+    overflow-x: hidden;
+  }
+}
