--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -58,8 +58,7 @@ div.container{
   border-radius: 0px !important;
 }
 .products_page a > img {
-  height: 100px !important;
-  width: 100px;
+  height: 150px;
   margin-left: auto;
   margin-right: auto;
 }
