--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -62,6 +62,9 @@ div.container{
   margin-left: auto;
   margin-right: auto;
 }
+a.caption {
+  margin-top: -5px;
+}
 .caption:hover {
   text-decoration: none;
 }
