--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -63,7 +63,7 @@ div.container{
   margin-right: auto;
 }
 a.caption {
-  margin-top: -32px;
+  margin-top: -42px !important;
 }
 .caption:hover {
   text-decoration: none;
