--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -64,6 +64,7 @@ div.container{
 }
 a.caption {
   margin-top: -42px !important;
+  padding-top: 0px;
 }
 .caption:hover {
   text-decoration: none;
