--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -61,6 +61,7 @@ div.container{
   height: 150px !important;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0px;
 }
 a.caption {
   margin-top: -52px !important;
