--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -62,6 +62,7 @@ div.container{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 a.caption {
   margin-top: 0px !important;
