--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -40,7 +40,7 @@ nav.pagination{
 .product-body {
   font-size: 18px;
   padding: 0px;
-  height: 205px;
+  height: 205px !important;
 }
 div.container{
   width: 100%;
