--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -35,6 +35,7 @@ body {
   border: none !important;
   box-shadow: 2px 2px 0px 0px lightgray; 
   border-radius: 0px !important;
+  padding-bottom: 0px;
 }
 #categories{
   text-align: center;
