--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -25,6 +25,10 @@ body {
   width: 200px;
   margin: 0px;
 }
+.thumbnail a {
+  margin: 0px;
+  padding: 0px;
+}
 .thumbnail {
   vertical-align: top;
   display: inline-block;
